<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        android:icon="@mipmap/icon_reset"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/set"
        android:icon="@mipmap/icon_setting"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@mipmap/icon_add"
        app:showAsAction="ifRoom"
        />

</menu>
