<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/lv_vibrate"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:src="@mipmap/ic_phone_vibrate"
        android:contentDescription="@string/blank" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_weight="18"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rmdSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/lt_week0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/week_0"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lt_week1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/week_1"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lt_week2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/week_2"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lt_week3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/week_3"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lt_week4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/week_4"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lt_week5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/week_5"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/lt_week6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_margin="4dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/week_6"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rmdStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hh_mm"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/rmdFinishTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hh_mm"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>