<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_customNotification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/notification_back"
    android:baselineAligned="false"
    tools:ignore="ContentDescription"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:src="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/dateTime"
        android:layout_margin="4dp"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/date_time"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/subject"
        android:layout_margin="4dp"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/subject_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/startFinish"
        android:layout_margin="4dp"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/startFinish"
        android:textSize="18sp" />
    <ImageView
        android:id="@+id/stopNow"
        android:layout_width="0sp"
        android:layout_weight="3"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:src="@mipmap/silent_now" />

</LinearLayout>